welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: illegal start of simple expression
 == Color.green=) (r=true)
                ^SlugTracking:12: error: ')' expected but '}' found.
    }
    ^SlugTracking:13: error: ';' expected but ')' found.
    else{return false)
                     ^